# mystery-alphabet-decoder

./: .gitignore  LICENSE  README.md  pyproject.toml
src/mystery_alphabet_decoder/: __init__.py  alphabet.txt  decode.py  decoded_as_greek.txt  deduce_alphabet_order.py  input.txt  translated_from_greek.txt
